@@ -5,14 +5,26 @@ use warnings FATAL => 'all';
 use Exporter 5.57 'import';
 our @EXPORT = qw/make_executable split_like_shell/;
 
+use Carp qw/croak/;
+use Config;
 use Text::ParseWords 3.24 qw/shellwords/;
-use ExtUtils::MakeMaker;
 
 sub make_executable {
-	my $file = shift;
-	my $current_mode = (stat $file)[2] + 0;
-	ExtUtils::MM->fixin($file) if -T $file;
-	chmod $current_mode | oct(111), $file;
+	my $filename = shift;
+	my $current_mode = (stat $filename)[2] + 0;
+	if (-T $filename) {
+		open my $fh, '<:raw', $filename;
+		my @lines = <$fh>;
+		if (@lines and $lines[0] =~ s/ \A \#! \s* perl (.*) \z /$Config{startperl}$1/xms) {
+			open my $out, '>:raw', "$filename.new" or croak "Couldn't open $filename.new: $!";
+			print $out @lines;
+			close $out;
+			rename $filename, "$filename.bak" or croak "Couldn't rename $filename to $filename.bak";
+			rename "$filename.new", $filename or croak "Couldn't rename $filename.new to $filename";
+			unlink "$filename.bak";
+		}
+	}
+	chmod $current_mode | oct(111), $filename;
 	return;
 }
 
