@@ -3,6 +3,7 @@ Revision history for ExtUtils-Helpers
 {{$NEXT}}
           Made man3_pagename more flexible with paths
           Reverted pl2bat to a more original state
+          Rewrote fixin code
 
 0.014     2012-02-22 21:42:35 Europe/Amsterdam
           Remove detildefication, defer to File::HomeDir to do it better
